AC_INIT(samplicate.c)
AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_LIB(nsl,gethostbyname)
AC_CHECK_LIB(socket,bind)
AC_STDC_HEADERS
AC_CHECK_HEADERS(stdlib.h unistd.h arpa/inet.h)
AC_TIME_WITH_SYS_TIME
AC_CHECK_SIZEOF(unsigned int,4)
AC_CHECK_SIZEOF(int,4)
AC_CHECK_SIZEOF(unsigned long,4)
AC_CHECK_SIZEOF(long,4)
AC_CHECK_FUNCS(strchr memcpy)
AC_OUTPUT(Makefile)
