AC_INIT(samplicate.c)
AM_INIT_AUTOMAKE(samplicate, 1.3.5)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_PROG_INSTALL
AC_CHECK_LIB(nsl,gethostbyname)
AC_CHECK_LIB(socket,bind)
AC_STDC_HEADERS
AC_CHECK_HEADERS(stdlib.h unistd.h ctype.h arpa/inet.h netinet/in_systm.h sys/uio.h)
AC_CHECK_FUNCS(memcpy strchr)
AC_REPLACE_FUNCS(inet_aton)
AC_OUTPUT(Makefile)
